--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,5 +11,9 @@
         android:layout_height="wrap_content"
         android:text="Hello World!"
         android:id="@+id/textview"/>
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        android:id="@+id/textview3"/>
 </LinearLayout>
